--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/asset-management
+MONGO_URI=mongodb://mongodb:27017/asset-management
 JWT_SECRET=your_jwt_secret
