--- a/MobApp/package.json
+++ b/MobApp/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "build:web": "expo export --platform web",
+    "build:web": "expo export --platform web --output-dir dist"
+
+,
     "lint": "expo lint"
   },
   "dependencies": {
